--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "release": "pnpm run build && changeset publish",
     "lint": "tsc"
   },
+  "dependencies": {
+    "nodemailer": "^6.9.15"
+  },
   "devDependencies": {
     "@changesets/cli": "^2.26.0",
+    "@types/nodemailer": "^6.4.16",
     "tsup": "^6.5.0",
     "typescript": "^4.9.4"
   }
